# traxers

./: README.md
traxers_nav/: CMakeLists.txt  package.xml
traxers_nav/include/traxers_nav/: costmap_vis.h  occ_grid_to_costmap_node.h  occ_grid_utils.h  state_space_2d.h  value_iteration.h
traxers_nav/launch/: occ_grid_to_costmap.launch
traxers_nav/resources/maps/: corridor_map.yaml  race_track_map.yaml
traxers_nav/resources/rviz/: map.rviz
traxers_nav/src/: occ_grid_to_costmap_node.cpp
traxers_nav/src/lib/: costmap_vis.cpp  state_space_2d.cpp  value_iteration.cpp
traxers_vision/: CMakeLists.txt  package.xml
traxers_vision/scripts/: lane-detect.py
vision/: CMakeLists.txt  package.xml
