<?xml version="1.0"?>
<package>
  <name>traxers_nav</name>
  <version>0.0.0</version>
  <description>The traxers_nav package</description>

  <maintainer email="pvechersky@gmail.com">pavel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>map_server</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>map_server</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
</package>
